--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
    "files.autoSave": "afterDelay",
    "workbench.colorTheme": "Dracula",
    "terminal.integrated.gpuAcceleration": "canvas",
-   "editor.defaultFormatter": "HookyQR.beautify"
+"editor.defaultFormatter": "HookyQR.beautify",
+"[python]": {
+    "editor.defaultFormatter": "ms-python.python"
+}
 }
